Add genre delete POST route

--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -21,6 +21,6 @@ block content
 
   hr
   p
-    a(href=bookinstance.url+'/delete') Delete Book
+    a(href=bookinstance.url+'/delete') Delete Instance
   p
-    a(href=bookinstance.url+'/update') Update Book
+    a(href=bookinstance.url+'/update') Update Instance
